@@ -12,7 +12,8 @@ if ($object->xpdo) {
 	switch ($options[xPDOTransport::PACKAGE_ACTION]) {
 		case xPDOTransport::ACTION_INSTALL:
 		case xPDOTransport::ACTION_UPGRADE:
-			$modx->addExtensionPackage('pdotools', '[[++core_path]]components/pdotools/model/');
+			//$modx->addExtensionPackage('pdotools', '[[++core_path]]components/pdotools/model/');
+			$modx->removeExtensionPackage('pdotools');
 			break;
 
 		case xPDOTransport::ACTION_UNINSTALL:
