@@ -6,3 +6,10 @@
  * @subpackage lexicon
  */
 $_lang['pdotools'] = 'pdoTools';
+
+
+$_lang['area_pdotools_main'] = 'Main';
+$_lang['setting_pdoTools.class'] = 'FQN of pdoTools';
+$_lang['setting_pdoTools.class_desc'] = 'Path for loading class from "MODX_CORE_PATH . model/modx/". <b>Do not edit!</b>';
+$_lang['setting_pdoFetch.class'] = 'FQN of pdoFetch';
+$_lang['setting_pdoFetch.class_desc'] = 'Path for loading class from "MODX_CORE_PATH . model/modx/". <b>Do not edit!</b>';
