@@ -6,3 +6,10 @@
  * @subpackage lexicon
  */
 $_lang['pdotools'] = 'pdoTools';
+
+
+$_lang['area_pdotools_main'] = 'Основные';
+$_lang['setting_pdoTools.class'] = 'FQN имя класса pdoTools';
+$_lang['setting_pdoTools.class_desc'] = 'Путь для загрузки класса из "MODX_CORE_PATH . model/modx/". <b>Не редактировать!</b>';
+$_lang['setting_pdoFetch.class'] = 'FQN имя класса pdoFetch';
+$_lang['setting_pdoFetch.class_desc'] = 'Путь для загрузки класса из "MODX_CORE_PATH . model/modx/". <b>Не редактировать!</b>';
